# vulkan-project

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Readme.md  main.cpp
resources/shaders/: text.frag  text.vert  ui.vert
src/: log.h  main.cpp  utils.h
src/core/: buffer.cpp  buffer.h  camera.cpp  camera.h  descriptor.cpp  descriptor.h  device.cpp  device.h  font.cpp  font.h  gameObject.cpp  gameObject.h  input.cpp  input.h  model.cpp  model.h  pipeline.cpp  pipeline.h  renderInfo.h  renderer.cpp  renderer.h  swapChain.cpp  swapChain.h  texture.cpp  texture.h  window.cpp  window.h
src/core/components/: UIComponent.h  textComponent.h
src/systems/: TextSystem.cpp  TextSystem.h  UISystem.cpp  UISystem.h
src/utils/: allocator.cpp  allocator.h  collision.cpp  collision.h  color.h  file.cpp  file.h  hash.h  timer.cpp  timer.h
